# learngl

./: CMakeLists.txt
Dependencies/include/glad/: glad.h
LearnGL/: LearnGL.sln
LearnGL/LearnGL/: LearnGL.vcxproj  LearnGL.vcxproj.filters  Shader.cpp  Shader.h  main.cpp  shader.fs  shader.vs
LearnGL/proj1/: Source.cpp  glad.c  proj1.vcxproj  proj1.vcxproj.filters
LearnGL/proj1/Debug/: vc140.idb
LearnGL/proj1/Debug/proj1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  proj1.lastbuildstate
res/shaders/: shader.fs  shader.vs
src/: camera.cpp  camera.h  main.cpp  shader.cpp  shader.h
